# 8025_pj4

./: .dockerignore  .gitignore  README.md  docker-compose.yml
docker/: Dockerfile  entrypoint.sh  ros_env.sh  tmux-dev.sh
presentation/: Dockerfile.latex  README.md  main.tex
report_paper/: .gitignore  Dockerfile  README.md  build.ps1  build_in_docker.sh  build_local.ps1  main.tex  references.bib
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: controllers.yaml
src/my_robot_description/urdf/: robot.urdf.xacro
src/my_robot_mission/: package.xml  setup.cfg  setup.py
src/my_robot_mission/my_robot_mission/: __init__.py  goal_orchestrator_node.py  initial_pose_publisher_node.py  manual_control_node.py  orbit_controller_node.py  telemetry_node.py  utils.py  video_recorder_node.py  waypoint_marker_node.py
src/my_robot_navigation/: CMakeLists.txt  package.xml
src/my_robot_navigation/config/: nav2_params.yaml  slam_toolbox.yaml  waypoints.yaml
src/my_robot_navigation/launch/: nav_demo.launch.py  slam_mapping.launch.py
src/my_robot_navigation/maps/: room_map.pgm  room_map.yaml
src/my_robot_navigation/rviz/: nav_demo.rviz
src/my_robot_sim/: CMakeLists.txt  package.xml
src/my_robot_sim/launch/: sim_world.launch.py
src/my_robot_sim/models/inspection_column/: model.config  model.sdf
src/my_robot_sim/models/inspection_column/materials/scripts/: inspection_column.material
src/my_robot_sim/worlds/: indoor_room.world
web/backend/: ros_bridge.py
web/static/: app.js  index.html  styles.css
