<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.1.0</version>
  <description>Robot description, sensors, and ros2_control configuration.</description>

  <maintainer email="luke@example.com">Luke</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
