<?xml version="1.0"?>
<package format="3">
  <name>my_robot_navigation</name>
  <version>0.1.0</version>
  <description>Navigation, SLAM, RViz, map, and mission configuration.</description>

  <maintainer email="luke@example.com">Luke</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>my_robot_mission</exec_depend>
  <exec_depend>my_robot_sim</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
